# autofont

./: .gitignore  .travis.yml  GNUmakefile  GNUmakefile.am  GNUmakefile.in  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac
.travis/: push-autotools-products.sh
test/: GNUmakefile  helpers  run-test
test/configure/: .04-fontmake-explicit-name-exists.test.swp  .05-ufolib-missing-with-font-srcdir-fails.test.swp  00-template.test  01-base-known-environment.test  01-base-unknown-environment-with-font-srcdir.test  01-base-unknown-environment-without-font-srcdir.test  02-font-srcdir-with-ufos.test  02-font-srcdir-without-ufos.test  03-font-ufodir-..-found.test  03-font-ufodir-..-source-found.test  03-font-ufodir-..-src-found.test  03-font-ufodir-not-found.test  04-fontmake-explicit-name-doesnt-exist.test  04-fontmake-explicit-name-exists.test  04-fontmake-explicit-path-doesnt-exist.test  04-fontmake-explicit-path-exists.test  04-fontmake-pip-and-pip-doesnt-exist.test  04-fontmake-pip-and-pip-exists.test  05-ufolib-doesnt-install-without-font-srcdir.test  05-ufolib-installs-with-font-srcdir.test  05-ufolib-missing-with-font-srcdir-fails.test  06-heterogeneous-source-typeface-family-name-detected.test  06-heterogeneous-source-typeface-family-name-not-detected.test  06-homogeneous-source-typeface-family-name-detected.test  06-homogeneous-source-typeface-family-name-not-detected.test  06-mixed-source-typeface-family-name-detected.test  06-source-typeface-family-name-detected.test  06-source-typeface-family-name-not-detected.test  06-ttfautohint-explicit-name-doesnt-exist.test  06-ttfautohint-explicit-name-exists.test  06-ttfautohint-explicit-path-doesnt-exist.test  06-ttfautohint-explicit-path-exists.test  06-ttfautohint-with-hints-minimal.test  06-ttfautohint-with-hints-none.test  06-with-hints-invalid.test  07-installdir-linux.test  07-installdir-unsupported-os.test  07-mixed-source-typeface-family-name-detected.test  07-mixed-source-typeface-family-name-not-detected.test  07-source-typeface-family-name-detected.test  (+5 more)
test/fixtures/: GNUmakefile
tests/: GNUmakefile  Makefile
tests/configure/: 00-template.sh  00-template.test  01-base-known-environment.test  01-base-unknown-environment-with-font-srcdir.test  01-base-unknown-environment-without-font-srcdir.test  01-base-unknown-environment.test  01-base.sh  01-base.test  02-font-srcdir-..-found.test  02-font-srcdir-..-source-found.test  02-font-srcdir-..-src-found.test  02-font-srcdir-explicit-path-doesnt-exist.test  02-font-srcdir-explicit-path-exists.test  02-font-srcdir-not-found.test  02-font-srcdir-with-ufos.test  02-font-srcdir-without-ufos.test  02-font-ufodirname-explicit-name-doesnt-exist.test  02-font-ufodirname-explicit-name-exists.test  02-fontmake-explicit-name-doesnt-exist.test  02-fontmake-explicit-name-exists.sh  02-fontmake-explicit-name-exists.test  02-fontmake-explicit-name-not-exists.sh  02-fontmake-explicit-name-not-exists.test  02-fontmake-explicit-path-doesnt-exist.test  02-fontmake-explicit-path-exists.sh  02-fontmake-explicit-path-exists.test  02-fontmake-explicit-path-not-exists.sh  02-fontmake-explicit-path-not-exists.test  02-fontmake-pip-and-pip-doesnt-exist.sh  02-fontmake-pip-and-pip-doesnt-exist.test  02-fontmake-pip-and-pip-exists.sh  02-fontmake-pip-and-pip-exists.test  03-font-ufodir-..-found.test  03-font-ufodir-..-source-found.test  03-font-ufodir-..-src-found.test  03-font-ufodir-not-found.test  03-fontmake-explicit-name-doesnt-exist.test  03-fontmake-pip-and-pip-doesnt-exist.test  03-fontmake-pip-and-pip-exists.test  04-fontmake-explicit-name-exists.test  (+7 more)
tools/: typeface-family-name.py  typeface-property.py
